--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -1,55 +1,30 @@
-name: univting git actions
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-lastest
-
-    strategy:
-      matrix:
-        node-version: [18.x]
+  build-and-push:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code.
-        uses: actions/checkout@v3
+    - name: Check out repository
+      uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4.0.1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: build npm_module
-        working-directory: ./
-        run: |
-          npm install
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: create env file
-        run: |
-          touch .env
-          cat << EOF >> .env
-          ${{ secrets.ENV }}
-
-      - name: zip distributions
-        run: zip -qq -r univ_deploy.zip .
-
-      - name: AWS configure credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Upload to S3
-        run: aws s3 cp --region ${{ secrets.AWS_REGION }} ./univ_deploy.zip s3://${{ secrets.S3_BUCKET }}/public/
-
-      - name: Deploy with AWS CodeDeploy
-        run: aws deploy create-deployment \
-          --application-name ${{ secrets.CODE_DEPLOY_APPLICATION }} \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --deployment-group-name ${{ secrets.DEPLOY_GROUP }} \
-          --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=public/univ_deploy.zip
-
-          
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
