--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -36,7 +36,7 @@ jobs:
         username: ${{ secrets.SERVER_USERNAME }}
         port: 22
         key: ${{ secrets.SERVER_KEY }}
-        script: id
+        script: whoami
 
         # script: |
         #   echo "Logging in to Docker Hub......"
