--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -33,7 +33,7 @@ jobs:
       uses: appleboy/ssh-action@v0.1.1
       with:
         host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        username: ubuntu
         port: 22
         key: ${{ secrets.SERVER_KEY }}
         script: whoami
