--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -30,12 +30,12 @@ jobs:
     #     tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
     
     - name: Deploy to EC2
-      uses: appleboy/ssh-action@v0.1.1
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.SERVER_USERNAME }}
         port: 22
-        password: ${{ secrets.SERVER_KEY }}
+        key: ${{ secrets.SERVER_KEY }}
         script: whoami
 
         # script: |
