--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -37,25 +37,16 @@ jobs:
         port: ${{ secrets.SERVER_PORT }}
         key: ${{ secrets.SERVER_KEY }}
         script: |
-            echo "Running whoami command..."
-            id
-            echo "Hostname:"
-            hostname
-            echo "Current Directory:"
-            pwd
-          # echo "Logging in to Docker Hub......"
-          # docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          echo "Pulling the latest Docker image..."
+          sudo docker pull ${{ env.DOCKER_IMAGE_TAG }}
 
-          # echo "Pulling the latest Docker image..."
-          # docker pull ${{ env.DOCKER_IMAGE_TAG }}
+          echo "Stopping the existing container..."
+          sudo docker stop ${{ secrets.DOCKER_IMAGENAME }} || true
 
-          # echo "Stopping the existing container..."
-          # docker stop ${{ secrets.DOCKER_IMAGENAME }} || true
+          echo "Removing the existing container..."
+          sudo docker rmi ${{ secrets.DOCKER_IMAGENAME }} || true
 
-          # echo "Removing the existing container..."
-          # docker rm ${{ secrets.DOCKER_IMAGENAME }} || true
+          echo "Running the new Docker container..."
+          sudo docker run -d --restart=always --name ${{ secrets.DOCKER_IMAGENAME }} -p 7777:7777 ${{ env.DOCKER_IMAGE_TAG }}
 
-          # echo "Running the new Docker container..."
-          # docker run -d --restart=always --name ${{ secrets.DOCKER_IMAGENAME }} -p 7777:7777 ${{ env.DOCKER_IMAGE_TAG }}
-
-          # echo "Deployment complete."
+          echo "Deployment complete."
