--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -10,44 +10,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+    # - name: Check out repository
+    #   uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
-    
-    # - name: Deploy to EC2
-    #   uses: appleboy/ssh-action@master
+    # - name: Log in to Docker Hub
+    #   uses: docker/login-action@v2
     #   with:
-    #     host: ${{ secrets.SERVER_IP }}
-    #     username: ${{ secrets.SERVER_USERNAME }}
-    #     port: ${{ secrets.SERVER_PORT }}
-    #     key: ${{ secrets.SERVER_KEY }}
-    #     script: |
-    #       cd ~/docker_test
-    #       echo "Pulling the latest Docker image..."
-    #       sudo docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #       echo "Stopping the existing container..."
-    #       sudo docker stop ${{ secrets.DOCKER_IMAGENAME }} || true
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
+    
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        port: ${{ secrets.SERVER_PORT }}
+        key: ${{ secrets.SERVER_KEY }}
+        script: |
+          cd ~/docker_test
+          echo "Pulling the latest Docker image..."
+          sudo docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
 
-    #       echo "Removing the existing container..."
-    #       sudo docker rmi ${{ secrets.DOCKER_IMAGENAME }} || true
+          echo "Stopping the existing container..."
+          sudo docker stop ${{ secrets.DOCKER_IMAGENAME }} || true
 
-    #       echo "Running the new Docker container..."
-    #       sudo docker run -d --restart=always --name ${{ secrets.DOCKER_IMAGENAME }} -p 7777:7777 ${{ env.DOCKER_IMAGE_TAG }}
+          echo "Removing the existing container..."
+          sudo docker rmi ${{ secrets.DOCKER_IMAGENAME }} || true
 
-    #       echo "Deployment complete."
+          echo "Running the new Docker container..."
+          sudo docker run -d --restart=always --name ${{ secrets.DOCKER_IMAGENAME }} -p 7777:7777 ${{ env.DOCKER_IMAGE_TAG }}
+
+          echo "Deployment complete."
