--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -29,18 +29,18 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_REPOSITORY }}:latest
     
-    # - name: Deploy to EC2
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.SERVER_IP }}
-    #     username: ${{ secrets.SERVER_USERNAME }}
-    #     port: ${{ secrets.SERVER_PORT }}
-    #     key: ${{ secrets.SERVER_KEY }}
-    #     script: |
-    #       cd ~/docker_test
-    #       echo "Pulling the latest Docker image..."
-    #       sudo docker-compose pull ${{ secrets.DOCKER_IMAGENAME }}
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        port: ${{ secrets.SERVER_PORT }}
+        key: ${{ secrets.SERVER_KEY }}
+        script: |
+          cd ~/docker_test
+          echo "Pulling the latest Docker image..."
+          sudo docker-compose pull ${{ secrets.DOCKER_IMAGENAME }}
 
-    #       sudo docker-compose up -d ${{ secrets.DOCKER_IMAGENAME }}
+          sudo docker-compose restart ${{ secrets.DOCKER_IMAGENAME }}
 
-    #       echo "Deployment complete."
+          echo "Deployment complete."
