--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -42,6 +42,6 @@ jobs:
           sudo docker-compose pull ${{ secrets.DOCKER_IMAGENAME }}
           sudo docker stop ${{secrets.DOCKER_IMAGENAME}} || true
           sudo docker rm ${{secrets.DOCKER_IMAGENAME}} || true
-          sudo docker run -d --restart=always --name ${{secrets.DOCKER_IMAGENAME}} -p 7777:7777 ${{ secrets.DOCKER_REPOSITORY }}:latest
+          sudo docker-compose up -d --restart=always --name ${{secrets.DOCKER_IMAGENAME}} -p 7777:7777 ${{ secrets.DOCKER_REPOSITORY }}:latest
 
           echo "Deployment complete."
